Rapid Prd/src/objects/Known_Fraud__c.object
<CustomObject>
    <description>Table of known Frauds data</description>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Business_Name__c</fullName>
        <label>Business Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fraud_Origination__c</fullName>
        <label>Fraud Origination</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internal Fraud</fullName>
                </value>
                <value>
                    <fullName>Internal Loss</fullName>
                </value>
                <value>
                    <fullName>External Fraud</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Social_Security_Number__c</fullName>
        <label>Social Security Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZIP__c</fullName>
        <label>ZIP</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Known Fraud</label>
    <nameField>
        <displayFormat>KF-{0000}</displayFormat>
        <label>Known Fraud Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Known Frauds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>